# Lima-camera-pco

./: .clang-format  .clang-format_Lima2  .clang-tidy_Lima2  .gitignore  .gitlab-ci.yml  CMakeLists.txt  Makefile  README.md  cpInstall  get_git_log.py  pom.xml  pom_64_Win7_shared.xml  setId
SISO/include/: gbe_error.h  os_type.h
bat/: PCO2k-2.lnk  getdate.py  lima_pco_ds.bat  lima_pco_ds2.bat  logsbackup.bat  logsoff.bat  logson.bat
bat/pcoLogsON/: SC2_gige_param.ini  sc2_clhs_param.ini  sen_cam_param.ini
cmake/: FindPco.cmake
conda/camera/: bld.bat  build.sh  meta.yaml
conda/tango/: bld.bat  meta.yaml
doc/: Merge-backup.txt  index.rst  notes.txt  tango.rst  test_py.txt
include/: Pco.h  PcoBinCtrlObj.h  PcoBufferCtrlObj.h  PcoCamera.h  PcoCameraSdk.h  PcoCameraUtils.h  PcoDetInfoCtrlObj.h  PcoGitVersion.h  PcoHwEventCtrlObj.h  PcoInterface.h  PcoRoiCtrlObj.h  PcoSyncCtrlObj.h
python/: Pco.py  __init__.py.cmake  __init__.py.make
sdkDevW/include/: Cpco_com.h  Cpco_com_cl_me4.h  Cpco_com_func.h  Cpco_com_func_2.h  Cpco_grab_cl_me4.h  VersionNo.h
sdkDevW/pco_classes/: Cpco_com.cpp  Cpco_com_func.cpp  Cpco_com_func_2.cpp
sdkDevW/pco_lib_base/: Cpco_log.cpp  Makefile  file12.cpp  pixelfly_decode.cpp
sdkDevW/pco_me4_classes/: Cpco_com_cl_me4.cpp  Cpco_grab_cl_me4.cpp  Cpco_grab_cl_me4_GL.cpp  Makefile
sdkPco/: PcoSdkVersion.h
sdkPco/bin64/: sc2_clhs.dll.v1_3_0_20
sdkPco/include/: PCO_errt.h  SC2_CamExport.h  sc2_SDKStructures.h  sc2_defs.h
sdkPco/lib64/: SC2_Cam.lib
sdkPcoLin/: PcoSdkVersion.h
sdkPcoLin/include/: Cpco_com.h  Cpco_com_func.h  Cpco_com_func_2.h  Cpco_grab_cl_me4.h  PCO_errt.h  PcoSdkVersion.h  VersionNo.h  fgrab_define.h  fgrab_prototyp.h  pco_includes.h
sdkPcoLin/pco_common/pco_classes/: Cpco_com.h
sdkPcoLin/pco_common/pco_libdyn/: libpcocam_me4.so.1.1.14  libpcoclhs.so.1.02.02  libpcocnv.so.1.01.08  libpcocom_me4.so.1.1.14  libpcodisp.so.1.01.08  libpcofile.so.1.01.08  libpcolog.so.1.01.08  libreorderfunc.so.1.01.08
sdkPcoLin/pco_me4/pco_classes/: Cpco_com_cl_me4.h  Cpco_grab_cl_me4_GL.h
sdkSisoLin/include/: clser.h  gbe.h
sip/: PcoCamera.sip
src/: Makefile  PcoBinCtrlObj.cpp  PcoBufferCtrlObj.cpp  PcoCamera.cpp  PcoCameraLin.cpp  PcoCameraSdk.cpp  PcoCameraSdkAdd.cpp  PcoCameraSdkLin.cpp  PcoCameraSdkWin.cpp  PcoCameraSip.cpp  PcoCameraUtils.cpp  PcoCameraWin.cpp  PcoDetInfoCtrlObj.cpp  PcoHwEventCtrlObj.cpp  PcoInterface.cpp  PcoRoiCtrlObj.cpp  PcoSyncCtrlObj.cpp  unused.txt
tango/: CMakeLists.txt  Pco.py
